# schedcp

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md
.claude/: settings.local.json
autotune/: .gitignore  Cargo.toml  README.md
autotune/src/: daemon.rs  lib.rs  prompt.rs  system_info.rs
document/: 2509.01245v2.txt  ai-gen-paper.md  basic.md  devlog.md  outline.md  related-and-modules.md  review_suggestions.md  sched-agent-design.md  schedcp-design.md
document/devlog/: UPDATES_SUMMARY.md  dsl.md  improvement.md  outline.md  review_suggestions.md
document/sched/: README.md
document/scx/: 01-overview.md  02-schedulers-analysis.md  03-tools-and-utilities.md  04-build-system-infrastructure.md  05-bpf-framework-kernel-integration.md  06-testing-benchmarking-infrastructure.md  07-summary-and-conclusions.md  README.md
mcp/: .gitignore  Cargo.toml  README.md  schedcp.log.2025-08-03  setup_claude.sh  setup_claude_code.sh
mcp.backup/: Cargo.toml  setup_claude.sh
mcp.backup/src/: main.rs
mcp/lib/process_manager/: Cargo.toml  README.md
mcp/lib/process_manager/src/: binary_extractor.rs  lib.rs  process_manager.rs  process_runner.rs  types.rs
mcp/new_sched/: .gitignore  Makefile
mcp/src/: cli.rs  lib.rs  main.rs  scheduler_generator.rs  scheduler_manager.rs  storage.rs  system_monitor.rs  workload_profile.rs
mcp/tests/: scheduler_generator_test.rs  test_mcp_server.rs  workload_integration_test.rs
scheduler/: .gitignore  Makefile  README.md  SCHEDULER_JSON_SCHEMA.md  __init__.py  linux_summary.md  merge_schedulers.py  scheduler_manager.py  scheduler_runner.py  schedulers.json  scx_instruction.md  update_scheduler_docs.sh
scheduler/custom_schedulers/: .gitignore  Makefile  README_scx_cxl.md  runqslower.bpf.c  runqslower.c  runqslower.h  scx_cxl.bpf.c  scx_cxl.c  scx_cxl.h  scx_cxl_rl.bpf.c  scx_cxl_rl.c  scx_pair.bpf.c  scx_pair.c  scx_pmu.c  scx_simple_cxl_pmu.bpf.c  scx_simple_cxl_pmu.c  scx_simple_cxl_pmu.h  test_scx_cxl.sh
scheduler/json/: scheduler-schema.json  schedulers.json.backup  validate_schedulers.py
scheduler/ml-scheduler/: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  ML_SCHEDULER_DOCUMENTATION.md  Makefile  README.md  schedcp.log.2025-08-02  schedcp.log.2025-08-03
scheduler/ml-scheduler/scx_rusty_ml/: Cargo.toml
scheduler/ml-scheduler/scx_rusty_ml/src/: load_balance.rs  main.rs
scheduler/ml-scheduler/scx_rusty_ml/src/bpf/: intf.h  main.bpf.c
scheduler/ml-scheduler/scx_rusty_ml/src/model_dir/: transfer.py
scheduler/ml-scheduler/src/: bpf_interface.rs  exact_ml_implementation.rs  lib.rs  main.rs  ml_scheduler_exact.rs  model_export.py  scheduler_integration.rs  test_ml.rs
scheduler/ml-scheduler/src/model_dir/: README.md  convert_model.py  convert_to_savedmodel.py  create_dummy_model.py  create_model.py  simple_convert.py  tf_convert.py  transfer.py
scheduler/prompt/: select.md
scheduler/sche_description/: scx_bpfland.json  scx_bpfland.md  scx_central.json  scx_central.md  scx_chaos.json  scx_chaos.md  scx_flash.json  scx_flash.md  scx_flatcg.json  scx_flatcg.md  scx_lavd.json  scx_lavd.md  scx_layered.json  scx_layered.md  scx_mitosis.json  scx_mitosis.md  scx_nest.json  scx_nest.md  scx_p2dq.json  scx_p2dq.md  scx_pair.json  scx_pair.md  scx_prev.json  scx_prev.md  scx_qmap.json  scx_qmap.md  scx_rlfifo.json  scx_rlfifo.md  scx_rustland.json  scx_rustland.md  scx_rusty.json  scx_rusty.md  scx_sdt.json  scx_sdt.md  scx_simple.json  scx_simple.md  scx_tickless.json  scx_tickless.md  scx_userland.json  scx_userland.md  (+2 more)
scheduler/template/: .gitignore  Makefile  fifo.bpf.c  loader.c
scheduler/template_simple/: Makefile
workloads/basic/: Makefile  README.md  evaluation_framework.py  run_evaluation.sh  scheduler_evaluation_plan.md  sysbench_guide.md
workloads/cxl-micro/: .gitignore  Makefile  READMD.md  README.md  bandwidth_analysis.md  cxl_micro_bench_start.py  cxl_perf_bandwidth_bench.py  double_bandwidth.cpp  measure.md  runnuma.sh  thread_workers.hpp
workloads/faiss/: BENCHMARKING.md  DATASET.md  README.md  bench_cpu_1bn.py  bench_gpu_1bn.py  benchmark_results.json  run_benchmark.py
workloads/ktransformers/: optimized_local_chat.py  run_optimized_chat.sh
workloads/linux-build-bench/: .gitignore  Makefile  README.md  linux_build_bench_start.py  linux_build_tester.py  monitor_linux_build.py  schedcp.log.2025-08-01
workloads/llama.cpp/: .gitignore  Makefile  README.md  ShareGPT_Research_Summary.md  UVM_BUG_INVESTIGATION.md  benchmark_results.csv  build_llama.sh  (+12 more)
(+375 files in other folders)
