[package]
name = "autotune"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"

[[bin]]
name = "autotune"
path = "src/bin/cli.rs"