[workspace]
members = [
    ".",
    "lib/process_manager",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[package]
name = "schedcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "process", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt", "registry"] }
tracing-appender = "0.2"
uuid = { version = "1.10", features = ["v4"] }
schemars = "1.0"
dashmap = "6.1"
dotenv = "0.15"
process_manager = { path = "lib/process_manager" }
clap = { version = "4.5", features = ["derive"] }
rust-embed = { version = "8.5", features = ["compression", "include-exclude"] }
tempfile = "3.13"
futures = "0.3"
log = "0.4"

[dev-dependencies]
tempfile = "3.13"
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }

[lib]
name = "schedcp"
path = "src/lib.rs"

[[bin]]
name = "schedcp"
path = "src/main.rs"

[[bin]]
name = "schedcp-cli"
path = "src/cli.rs"