[package]
name = "ml-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc = { version = "3.4", features = ["termination"] }
futures = "0.3"
libc = "0.2"
log = "0.4"
ordered-float = "3.4"
scx_utils = "1.0.6"
simplelog = "0.12"
tokio = { version = "1.40", features = ["full"] }
tensorflow = "0.21.0"

[[bin]]
name = "ml-scheduler"
path = "src/main.rs"

[[bin]]
name = "test-ml"
path = "src/test_ml.rs"